[package]
name = "compose-validatr"
version = "0.1.1"
edition = "2021"
description = "Library for parsing and validating Docker compose manifests"
license = "MIT"
keywords = ["parser", "parsing", "api", "docker", "validation"]
categories = ["parsing"]
readme = "README.md"
repository = "https://github.com/dobecad/compose-validatr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnetwork = "0.20.0"
regex = "1.9.5"
serde = { version = "1.0.187", features = ["derive"] }
serde_yaml = "0.9.25"
